--- a/app/views/partner_mailer/booking_request_email.html.erb
+++ b/app/views/partner_mailer/booking_request_email.html.erb
@@ -4,12 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>You've got a booking request </h1>
+    <h1>You have a booking request </h1>
     <p>
-      You've got a booking request from <%= @booking.first_name %> <%= @booking.last_name %> at <%= @booking.to_str_time %> in <%= @booking.site.business.name %> for <%= @booking.number_of_person %> people
+      You have a booking request from <%= @booking.first_name %> <%= @booking.last_name %> for <%= @booking.to_str_time %> for <%= @booking.site.business.name %> (<%= @booking.number_of_person %> people)
     </p>
     <p>
-      To confirm this booking, just follow <a href="http://<%= @url %>/#/app/commerce/bookings?id=<%= @booking.id %>">this link</a>
+      To confirm this booking, click <a href="http://<%= @url %>/#/app/commerce/bookings?id=<%= @booking.id %>">this link</a>
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
