--- a/app/views/user_mailer/booking_confirm_email.html.erb
+++ b/app/views/user_mailer/booking_confirm_email.html.erb
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Your booking has been confirmed with #{@booking.site.business.name}</h1>
+    <h1>Your booking has been confirmed with <%= @booking.site.business.name %></h1>
     <p>
-      Hello <%= @booking.first_name %> <%= @booking.last_name %><br> Your booking request on <%= @booking.to_str_time %> for <%= @booking.site.business.name %> (<%= @booking.number_of_person %> people) had been confirmed.
+      Hello <%= @booking.first_name %> <%= @booking.last_name %><br><br> Your booking request on <%= @booking.to_str_time %> for <%= @booking.site.business.name %> (<%= @booking.number_of_person %> people) had been confirmed.
     </p>
     <p>Thanks and have a great day!</p>
   </body>
